--- a/style.css
+++ b/style.css
@@ -6,20 +6,43 @@
     margin: 0;
     font-family: 'Inter', Verdana, 'Geneva', Tahoma, sans-serif;
     font-weight: 400;
+    color: hsl(0, 0%, 100%);
 }
 
 body{
     display: flex;
     height: 100vh;
-
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: hsl(0, 0%, 8%);
 }
 
 .focused-build{
+display: flex;
+align-items: center;
+flex-direction: column;
+border: 1px solid hsl(0, 0%, 12%);
+margin: 20px auto;
+background-color: hsl(0, 0%, 12%);
+}
 
+img{
+    width: 200px;
+    height: 200px;
+    object-fit: contain;
+    border-radius: 50%;
+    padding: 25px;
+}
+.info{
+display: flex;
+flex-direction: column;
+text-align: center;
 }
 
 #name{
-
+    font-family: 'Inter';
+    font-weight: 700;
 }
 
 #location{
@@ -31,7 +54,9 @@ body{
 }
 
 .socials{
-
+display: flex;
+flex-direction: column;
+align-items: center;
 }
 
 a{
