--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ img{
     text-align: center;
     text-decoration: none;
     width: 100%;
-    padding: 10px;
+    padding: 15px 0 10px;
     background-color: hsl(0, 0%, 20%);
     margin: 10px;
     height: 15%;
